01UOA_INST-UOA_NDE/assets/css/custom.css
body, nde-full-display-navigation, .filters-container, .quick-filters, .side-nav-filters-actions, .filters-side-bar-content, .search-results-wrapper nde-search-results-top-bar{
  background-color: #f5f5f5 !important;
}
nde-logo {
  display: none;
}
[data-qa="link-to-newspaper-search"] {
  display: none;
}
.ual-top-banner {background-color:#275D38; height:70px; padding:15px 0 15px 30px;}
.ual-top-banner img {float:left; height:40px;}
.ual-inner {margin:auto; max-width:1240px;}
.ual-library-tag {float:left; color:#F2CD00; font-size:1.8rem; text-decoration: none; margin:7px 0 0 35px; font-weight: 200;}

.main-landing-page .about .about-content .about-text {
  gap:0.3rem;
}
.container .custom-search-bar-container h2 {
  display: none;
}
.container .custom-search-bar-container{
  height:10rem !important;
}
.container .top-bar-background-image{
  background-image: none !important;
}
.container nde-top-bar{
    background-color: #f5f5f5 !important;
}
.home-page-container {
    margin-top: 0 !important;
}
.custom-search-bar-container .background-overlay {
    display: none;
}
.search-bar-container .advanced-search-button.advanced-search-btn-home-page {
  color: #296b2b !important;
}
.links-block .separated-block-item:after {
    transform: rotate(0deg);
  }

 /* chat widget styles */ 
.s-lch-widget-float.open{
  height:75%;
  top:auto;
}
.s-lch-widget-float-btn{
  box-shadow:none !important;
  background-color:transparent;
}
.s-lch-widget-float-btn img{
  box-shadow: 0 0 0 0 rgba(200, 107,    168, 0.7);
  animation: pulse 3s infinite cubic-bezier(0.66, 0, 0, 1);
  border-radius:15px;
  background-color:transparent;
}
.s-lch-offline-msg-2 a{
  display:block;
}
.s-lch-widget-float-btn img:hover, img[alt="Chat is Offline"]
{
  animation: none;
}
.search-bar-container .search-input-field.keyboard-focused {
  outline: 1px #007A5E !important;
}
@keyframes pulse {to {box-shadow: 0 0 0 6px rgba(200,107,168, 0);}}

@media only screen and (min-width: 768px) and (max-width: 1919.98px) {
    .cdk-overlay-container:has(.main-menu-dialog) {
        top: 135px !important;
    }
}

